--- a/Crud_Axios.html
+++ b/Crud_Axios.html
@@ -18,7 +18,7 @@
         <input type="text" name="Constelacion" placeholder="Constelacion" required>
         <br>
         <input type="submit" value="Enviar">
-        <input type="hidden" name="action">
+        <input type="hidden" name="id">
 
       </form>
     </article>
