--- a/Ajax_Ejercicios/Sitio-Ajax_1.html
+++ b/Ajax_Ejercicios/Sitio-Ajax_1.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sitio con ajax</title>
     <!-- Esta pagina No podra tener SEO -->
+    <!-- Este ejercicio es para Que no cambien la url -->
 
   <style>
     html{
