--- a/Ajax_Ejercicios/uploader_3.html
+++ b/Ajax_Ejercicios/uploader_3.html
@@ -1,26 +1,33 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uploader con Ajax</title>
   <style>
-    html{
+    html {
       box-sizing: border-box;
       font-family: sans-serif;
       font-size: 16px;
     }
 
-    *,*::before,*::after{
+    *,
+    *::before,
+    *::after {
       box-sizing: inherit;
     }
 
-    main{
+    main {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
       min-height: 100vh;
+    }
+
+    progress {
+      margin-top: 1rem;
     }
   </style>
 
@@ -34,42 +41,77 @@
 
   <main>
     <input type="file" name="files" id="files" multiple>
+    <!-- <progress value="50" max="100"></progress>
+    70% - IMG.jpg -->
   </main>
   <script>
     const d = document,
-        $main = d.querySelector("main"),
-        $files = d.getElementById("files");
+      $main = d.querySelector("main"),
+      $files = d.getElementById("files");
 
-    const uploader = (file) =>{
+    const uploader = (file) => {
       //console.log(file);
       const xhr = new XMLHttpRequest(),
-          formData = new FormData();
+        formData = new FormData();
 
-      formData.append("file",file);
+      formData.append("file", file);
 
-      xhr.addEventListener("readystatechange", e =>{
-        if (xhr.readyState !== 4)return;
-        if (xhr.status >= 200 && xhr.status <300) {
+      xhr.addEventListener("readystatechange", e => {
+        if (xhr.readyState !== 4) return;
+        if (xhr.status >= 200 && xhr.status < 300) {
           let json = JSON.parse(xhr.responseText);
           console.log(json)
           console.log(xhr.responseText);
-        }else{
+        } else {
           let message = xhr.statusText || "ocurrio un error";
           console.error(`Error ${xhr.status}: ${message}`)
         }
       });
 
-      xhr.open("POST","assets/uploader.php");
-      xhr.setRequestHeader("enc-type","multipart/form-data");
+      xhr.open("POST", "assets/uploader.php");
+      xhr.setRequestHeader("enc-type", "multipart/form-data");
       xhr.send(formData);
     }
 
+    const progressUpload = (file) => {
+      const $progress = d.createElement("progress"),
+        $span = d.createElement("span");
+
+      $progress.value = 0;
+      $progress.max = 100;
+
+      $main.insertAdjacentElement("beforeend", $progress);
+      $main.insertAdjacentElement("beforeend", $span);
+
+      const fileReader = new FileReader();
+
+      fileReader.readAsDataURL(file);
+
+      fileReader.addEventListener("progress", e => { 
+        //console.log(e);
+        let progress = parseInt((e.loaded * 100) / e.total);
+        $progress.value = progress;
+        $span.innerHTML = `<b> ${file.name} - ${progress} %</b>`
+      });
+
+      fileReader.addEventListener("loadend", e => {
+        uploader(file);
+        setTimeout(() => {
+          $main.removeChild($progress);
+          $main.removeChild($span);
+          $files.value = "";
+        }, 3000);
+      });
+
+
+    }
+
     d.addEventListener("change", e => {
-      if(e.target === $files){
-        console.log(e.target.files);
+      if (e.target === $files) {
+        //console.log(e.target.files);
 
         const files = Array.from(e.target.files);
-        files.forEach(el => uploader(el));
+        files.forEach(el => progressUpload(el));
 
       }
     });
