--- a/Ajax_Ejercicios/uploader_4_Drag.html
+++ b/Ajax_Ejercicios/uploader_4_Drag.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Uploader con Ajax</title>
+  <title>Uploader Drag & Drop con Ajax</title>
   <style>
     html {
       box-sizing: border-box;
@@ -16,7 +16,7 @@
     *::after {
       box-sizing: inherit;
     }
-    
+
     body{
       margin: 0;
     }
@@ -33,25 +33,54 @@
     progress {
       margin-top: 1rem;
     }
+
+
+    .drop-zone{
+      margin-left: auto;
+      margin-right: auto;
+      border: thin dotted #000;
+      width: 80%;
+      height: 40vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .drop-zone.is-active{
+      border: thick dashed #000;
+      background-color: rgba(4, 252, 235, 0.288);
+      animation: pulse 1.5s infinite;
+      animation-timing-function: linear;
+    }
+
+    @keyframes pulse{
+      0%,
+      100%{
+        transform: scale(1);
+      }
+      50%{
+        transform: scale(1.1);
+      }
+    }
   </style>
 
 
 </head>
 
-
-
-
 <body>
 
   <main>
-    <input type="file" name="files" id="files" multiple>
+    <article class="drop-zone">
+      <p>Arrastra y suelta tus Archivos</p>
+    </article>
     <!-- <progress value="50" max="100"></progress>
     70% - IMG.jpg -->
   </main>
   <script>
     const d = document,
       $main = d.querySelector("main"),
-      $files = d.getElementById("files");
+      $dropZone = d.querySelector(".drop-zone");
 
     const uploader = (file) => {
       //console.log(file);
@@ -103,22 +132,37 @@
         setTimeout(() => {
           $main.removeChild($progress);
           $main.removeChild($span);
-          $files.value = "";
         }, 3000);
       });
 
 
     }
 
-    d.addEventListener("change", e => {
-      if (e.target === $files) {
-        //console.log(e.target.files);
-
-        const files = Array.from(e.target.files);
-        files.forEach(el => progressUpload(el));
-
-      }
+    $dropZone.addEventListener("dragover", e => {
+      //console.log(e);
+      e.preventDefault();
+      e.stopPropagation();
+      e.target.classList.add("is-active");
     });
+
+    $dropZone.addEventListener("dragleave", e => {
+      //console.log(e);
+      e.preventDefault();
+      e.stopPropagation();
+      e.target.classList.remove("is-active");
+    });
+
+    $dropZone.addEventListener("drop", e => {
+      //console.log(e);
+      e.preventDefault();
+      e.stopPropagation();
+      const files = Array.from(e.dataTransfer.files);
+      files.forEach(el => progressUpload(el));
+      e.target.classList.remove("is-active");
+
+    });
+
+
 
 
   </script>
