Ejercicio de stripe 1-3 final

--- a/Ajax_Ejercicios/assets/stripe-success.html
+++ b/Ajax_Ejercicios/assets/stripe-success.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Pago exitoso con Stripe</h1>
   <p>Gracias por la orden de Tacos 🌮😋</p>
+  <a href="../stripe_checkout.html">Volver a compras</a>
 </body>
 
 </html>
