--- a/javaScript/Ajax_Ejercicios/wp-api-rest_12.html
+++ b/javaScript/Ajax_Ejercicios/wp-api-rest_12.html
@@ -131,7 +131,7 @@
     Domain_ = "https://www.redvirtual.bid",
     Site_ = `${Domain_}/wp-json`,
     API_WP = `${Site_}/wp/v2`,
-    Post_ = `${API_WP}/posts`,
+    Post_ = `${API_WP}/posts?_embed`,
     Pages_ = `${API_WP}/Pages`,
     Categories_ = `${API_WP}/Categories`,
     Users_ = `${API_WP}/Users`;
@@ -167,10 +167,21 @@
     }
 
     function getPosts(){
+      $loader.style.display = "block";
       fetch(Post_)
       .then(res => res.ok ? res.json() : Promise.reject(res))
       .then(json => {
-        console.log(json)
+        console.log(json);
+        json.forEach(el => {
+          $template.querySelector(".post-image").src = el._embedded["wp:featuredmedia"][0].source_url;
+          $template.querySelector(".post-image").alt = el.title.rendered;
+          $template.querySelector(".post-title").innerHTML = el.title.rendered;
+
+          let $clone = d.importNode($template, true);
+          $fragment.appendChild($clone);
+        });
+        $posts.appendChild($fragment);
+        $loader.style.display = "none"
       })
       .catch(err => {
         console.log(err);
