--- a/javaScript/Jon Mircha/SPA/Index.html
+++ b/javaScript/Jon Mircha/SPA/Index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VanillaJs-SPA</title>
   <link rel="stylesheet" href="App/Assets/Style.css">
   <link rel="icon" href="App/Assets/pollo.jpg">
+  <style id="dynamic-styles"></style>
 </head>
 
 <body>
   <div id="root"></div>
   <script src="App/index.js" type="module"></script>
 
-  
-  
+
 </body>
+
 </html>
