--- a/javaScript/Jon Mircha/PWA/index.html
+++ b/javaScript/Jon Mircha/PWA/index.html
@@ -17,7 +17,7 @@
   <link rel="apple-touch-startup-image" href="Assets/Main.png">
 
   <link rel="stylesheet" href="Assets/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Relaway:400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
 
   <link rel="manifest" href="./manifest.json">
@@ -55,8 +55,8 @@
 
 
   <main class="Main">
-    <iframe src="https://www.youtube.com/embed/videoseries?list=PLvq-jlKSeTUbJFWQx8gcy1MK0lTLrdLR9" frameborder="0"
-      allow="autoplay;encrypted-media" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9oQIylJ-JpU" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </main>
 
   <script src="script.js"></script>
