--- a/Css/SVG/Texto_vertical.html
+++ b/Css/SVG/Texto_vertical.html
@@ -29,19 +29,23 @@
 
   <body>
     <svg viewBox="0 0 400 300">
+      <path
+        d="m0, 0 q300, 0 400, 300"
+        fill="none"
+        stroke="red"
+        id="path"
+      />
       <text
-        x="50%"
-        y="0%"
-        font-size="48"
+        x="20"
+        y="100"
+        font-size="32"
         text-anchor="start"
-        dx="0"
-        dy="0"
         font-weight="bold"
         fill="none"
         stroke="red"
         stroke-width="0.3"
       >
-        Hola amigos
+        <textPath href="#path">Hola amigos</textPath>
       </text>
     </svg>
   </body>
