--- a/javaScript/App_js/Repaso_Js.html
+++ b/javaScript/App_js/Repaso_Js.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,11 +10,8 @@
     <title>Apps con Js</title>
   </head>
   <body></body>
-  <script src="Arrays_1.js"></script>
-  <script src="Arrays_2.js"></script>
-  <script src="Arrays_3.js"></script>
   <script src="Arrays_4.js"></script>
-
+  
   
   
   
@@ -29,4 +26,7 @@
     <script src="Objetos_3.js"></script>
     <script src="Objetos_4.js"></script>
     <script src="Objetos_5.js"></script>
---></html>
+    <script src="Arrays_1.js"></script>
+    <script src="Arrays_2.js"></script>
+    <script src="Arrays_3.js"></script>
+  --></html>
