--- a/javaScript/App_js/Repaso_Js.html
+++ b/javaScript/App_js/Repaso_Js.html
@@ -10,8 +10,9 @@
     <title>Apps con Js</title>
   </head>
   <body></body>
-  <script src="Arrays_4.js"></script>
   
+  
+  <script src="Function_3.js"></script>
   
   
   
@@ -29,4 +30,7 @@
     <script src="Arrays_1.js"></script>
     <script src="Arrays_2.js"></script>
     <script src="Arrays_3.js"></script>
+    <script src="Arrays_4.js"></script>
+    <script src="Function_1.js"></script>
+    <script src="Function_2.js"></script>
   --></html>
