--- a/javaScript/App_js/Repaso_Js.html
+++ b/javaScript/App_js/Repaso_Js.html
@@ -12,7 +12,7 @@
   <body></body>
   
   
-  <script src="Function_3.js"></script>
+  
   
   
   
@@ -20,8 +20,8 @@
   <!-- 
     <script src="Metodo_String.js"></script> 
     <script src="Metodo_Number.js"></script>
-    <script src="Metodo_Array.js"></script>
     <script src="Metodo_Math.js"></script>
+    <script src="Metodo_Array.js"></script>
     <script src="Objetos_1.js"></script>
     <script src="Objetos_2.js"></script>
     <script src="Objetos_3.js"></script>
@@ -33,4 +33,8 @@
     <script src="Arrays_4.js"></script>
     <script src="Function_1.js"></script>
     <script src="Function_2.js"></script>
+    <script src="Function_3.js"></script>
+    <script src="Structure_Control_1.js"></script>
+    <script src="iteredores_1.js"></script>
+    <script src="iteredores_2.js"></script>
   --></html>
