Finish eventos... new proyect

--- a/javaScript/App_js/Repaso_Js.html
+++ b/javaScript/App_js/Repaso_Js.html
@@ -8,13 +8,118 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Apps con Js</title>
+    <style>
+      .Parr p {
+        color: red;
+      }
+    </style>
   </head>
-  <body></body>
-  
-  
-  
-  
-  
+  <body>
+    <h1 class="htm" id="ComoEstas">Hola Soy keiberth</h1>
+    <a href="#" class="Hola" id="Como_Estas"></a>
+
+    <div class="h">
+      <a href="" class="k">L</a>
+      <a href="" class="k">I</a>
+      <a href="" class="k">F</a>
+      <a href="" class="k">H</a>
+      <a href="" class="kk">O</a>
+      <a href="" class="kkk">L</a>
+      <a href="" class="kkkk">A</a>
+    </div>
+
+    <div class="Parr">
+      <p class="vaca">La vaca lola se pica la cola</p>
+      <p class="elefante">El elefante sobre la cuerda</p>
+      <p class="zorro">Zorro no te lo lleves zorro no</p>
+    </div>
+
+    <form class="formulario" id="formulario">
+      <input
+        type="text"
+        name="Busquedad"
+        class="Busquedad"
+        placeholder="Quiero buscar"
+      />
+      <input type="submit" value="Buscar" />
+    </form>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. ero harum
+      odit ut fuga culpa esse error aut, veniam deserunt laboriosam minus
+      suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsum.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. ero harum
+      odit ut fuga culpa esse error aut, veniam deserunt laboriosam minus
+      suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsum.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. ero harum
+      odit ut fuga culpa esse error aut, veniam deserunt laboriosam minus
+      suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsum.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. ero harum
+      odit ut fuga culpa esse error aut, veniam deserunt laboriosam minus
+      suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsum.
+    </p>
+    <a href="" class="th">A</a>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. ero harum
+      odit ut fuga culpa esse error aut, veniam deserunt laboriosam minus
+      suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsum.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. ero harum
+      odit ut fuga culpa esse error aut, veniam deserunt laboriosam minus
+      suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsumLorem ipsum dolor sit amet consectetur adipisicing elit. ero
+      harum odit ut fuga culpa esse error aut, veniam deserunt laboriosam
+      minus suscipit distinctio quae eius ullam reprehenderit quasi minima
+      ipsum.
+    </p>
+  </body>
+
+  <script src="Eventos_2.js"></script>
   
   
   <!-- 
@@ -37,4 +142,8 @@
     <script src="Structure_Control_1.js"></script>
     <script src="iteredores_1.js"></script>
     <script src="iteredores_2.js"></script>
-  --></html>
+    <script src="DOM_1.js"></script>
+    <script src="DOM_2.js"></script>
+    <script src="Eventos_1.js"></script>
+  -->
+</html>
