inicios_con_proyectos_Js

--- a/javaScript/App_js/Project/Carrito_de_compras/index.html
+++ b/javaScript/App_js/Project/Carrito_de_compras/index.html
@@ -5,21 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mercado Libre</title>
-  <link rel="stylesheet" href="assets/style.css">
-  <link rel="stylesheet" href="assets/normalice.css">
-  <link rel="stylesheet" href="assets/custom.css">
+  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./assets/normalize.css">
+<!--   <link rel="stylesheet" href="./assets/custom.css"> -->
 </head>
 <body>
   <header id="header" class="header">
     <div class="container">
       <div class="row">
         <div class="four columns">
-          <img src="http://placeimg.com/200/200/tech" id="logo" alt="tech">
+          <img src="assets/sub.jpg" width="150" id="logo" alt="tech">
         </div>
         <div class="two colums u-pull-right">
           <ul>
             <li class="submenu">
-              <img src="http://placeimg.com/200/200/animals" id="img-carrito" alt="carrito">
+              <img src="assets/sub.jpg" width="150" id="img-carrito" alt="carrito">
               <div id="carrito">
 
                 <table id="lista-carrito" class="u-full-width">
@@ -61,6 +61,82 @@
     </div>
   </div>
 
+  <div class="barra">
+    <div class="container">
+      <div class="row">
+        <div class="four columns icono icono1">
+          <p>20,000 Cursos en linea <br>
+          Explora los temas mas recientes</p>
+        </div>
+        <div class="four columns icono icono2">
+          <p>Instructores expertos <br>
+          aprende con distintos estilos</p>
+        </div>
+        <div class="four columns icono icono3">
+          <p>Acceso de por vida <br>
+          Aprende a tu ritmo</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div id="lista-cursos" class="container">
+  <h1 id="encabezado" class="encabezado">Cursos en linea</h1>
+  <div class="row">
+    <div class="four colums">
+      <div class="card">
+        <img src="#" class="imagen-curso u-full-width" alt="???">
+        <div class="info-card">
+          <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+          <p>Juan Pedro</p>
+          <img src="#" alt="">
+          <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+          <a href="#" class="u-full-width button-primary button input agregar-carrito"
+          data-id="1">Agragar al Carrito</a>
+        </div>
+      </div>
+    </div>
+    <div class="four columns">
+      <div class="card">
+        <img src="#" class="imagen-curso u-full-width" alt="">
+        <div class="info-card">
+          <h4>Curso de Comida Vegetariana</h4>
+          <p>juan Pedro</p>
+          <img src="#" alt="">
+          <p class="precio">$300 <span class="u-pull-right">$50</span></p>
+          <a href="#" class="u-full-width button-primary button input agregar-carrito"
+          data-id="1">Agragar al Carrito</a>
+        </div>
+      </div>
+    </div>
+    <div class="four columns">
+      <div class="card">
+        <img src="#" class="imagen-curso u-full-width" alt="">
+        <div class="info-card">
+          <h4>Curso de Comida China</h4>
+          <p>juan Pedro</p>
+          <img src="#" alt="">
+          <p class="precio">$4621 <span class="u-pull-right">$50</span></p>
+          <a href="#" class="u-full-width button-primary button input agregar-carrito"
+          data-id="1">Agragar al Carrito</a>
+        </div>
+      </div>
+    </div>
+    <div class="four columns">
+      <div class="card">
+        <img src="#" class="imagen-curso u-full-width" alt="">
+        <div class="info-card">
+          <h4>Curso de PHP</h4>
+          <p>juan Pedro</p>
+          <img src="#" alt="">
+          <p class="precio">$1200 <span class="u-pull-right">$50</span></p>
+          <a href="#" class="u-full-width button-primary button input agregar-carrito"
+          data-id="1">Agragar al Carrito</a>
+        </div>
+      </div>
+    </div>
+  </div>  
+</div>
   
 
 
