--- a/Css/Bootstrap/1-Curso Bootstrap/11 - Plantilla.html
+++ b/Css/Bootstrap/1-Curso Bootstrap/11 - Plantilla.html
@@ -48,7 +48,7 @@
           <aside class="col-12 d-none d-md-block col-md-4 text-center bg-secondary py-4">
             <h4 class="text-white p-2">Tutorial en línea</h4>
             <img src="img/4.jpg" class="img-fluid rounded" alt="Tutorial en línea de fotografía">
-            <div class="bg-light p-2 mt-1"> <a href="" class="text-success h4"><p class="p-0 m-0">Comprar</p></a></div>
+            <div class="bg-light p-2 mt-1 rounded-3"> <a href="" class="text-success h4"><p class="p-0 m-0">Comprar</p></a></div>
           
           </aside>
         </div>
@@ -58,7 +58,7 @@
 
     
     <footer>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row bg-dark">
           <div class="col-12 p-4 text-end">
             <p class="h5 text-light m-0 p-0">Diseño web, todos los derechos reservados.</p>
