--- a/Css/Bootstrap/1-Curso Bootstrap/19 - Textos.html
+++ b/Css/Bootstrap/1-Curso Bootstrap/19 - Textos.html
@@ -1,12 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
 
     <title>Textos</title>
   </head>
@@ -14,46 +17,71 @@
     <div class="container">
       <div class="row">
         <div class="col-12 bg-secondary p-3 my-1">
-          <p class="text-white m-0 text-justify">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora praesentium veniam fugiat officiis nesciunt debitis vitae error, atque dolores eos laborum tempore, labore sit id nobis quam! Ducimus a ab dicta aliquid, iure repellendus eos. Aspernatur amet praesentium illum. Ducimus dolorem quo id provident perferendis corporis a officiis, cupiditate omnis!</p>
+          <p class="text-white m-0 text-justify">
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Tempora praesentium veniam fugiat
+            officiis nesciunt debitis vitae error, atque dolores eos
+            laborum tempore, labore sit id nobis quam! Ducimus a ab dicta
+            aliquid, iure repellendus eos. Aspernatur amet praesentium
+            illum. Ducimus dolorem quo id provident perferendis corporis a
+            officiis, cupiditate omnis!
+          </p>
         </div>
-         <div class="col-12 bg-secondary p-3 my-1">
-          <p class="text-white m-0 text-left">Lorem ipsum dolor sit amet.!</p>
-        </div>
+
         <div class="col-12 bg-secondary p-3 my-1">
-          <p class="text-white m-0 text-center">Lorem ipsum dolor sit amet.!</p>
+          <p class="text-white m-0 text-left">
+            Lorem ipsum dolor sit amet.!
+          </p>
         </div>
+
         <div class="col-12 bg-secondary p-3 my-1">
-          <p class="text-white m-0 text-right">Lorem ipsum dolor sit amet.!</p>
+          <p class="text-white m-0 text-center">
+            Lorem ipsum dolor sit amet.!
+          </p>
         </div>
+
         <div class="col-12 bg-secondary p-3 my-1">
-          <p class="text-white m-0 text-md-right">Lorem ipsum dolor sit amet.!</p>
+          <p class="text-white m-0 text-right">
+            Lorem ipsum dolor sit amet.!
+          </p>
         </div>
+
+        <div class="col-12 bg-secondary p-3 my-1">
+          <p class="text-white m-0 text-md-right">
+            Lorem ipsum dolor sit amet.!
+          </p>
+        </div>
+
         <div class="bg-primary text-nowrap col-12 my-1">
           Hola como estás, yo muy bien.
         </div>
+
         <div class="col-2 bg-primary text-white my-1 text-truncate">
           Hola como estás, yo muy bien. Lorem ipsum dolor sit amet.
         </div>
+
         <div class="col-6 bg-primary text-white my-1 text-break">
-          mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
+          mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
+          mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
+          mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
         </div>
+
         <div class="col-12">
           <p class="font-weight-bold">Bold</p>
           <p class="font-weight-bolder">Bolder</p>
           <p class="font-weight-light">Light</p>
           <p class="font-weight-lighter">Lighter</p>
           <p class="font-italic">Italica</p>
-          <br>
+          <br />
           <a href="" class="text-decoration-none">Enlace</a>
-          <br>
+          <br />
           <p>Sin monospace</p>
           <p class="text-monospace">Con Monospace</p>
-          <br>
-
+          <br />
         </div>
+        
       </div>
     </div>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
