--- a/Css/Bootstrap/1-Curso Bootstrap/12 - Bordes.html
+++ b/Css/Bootstrap/1-Curso Bootstrap/12 - Bordes.html
@@ -18,55 +18,62 @@
         height: 100px;
       }
       .caja-rectangular{
-        background: #000;
-        width: 200px;
+        background: rgb(158, 101, 101);
+        width: 237px;
         height: 100px;
       }
     </style>
+
+    
   <div class="container">
     <div class="row">
+    <h3 class="text-white text-start mt-5 ms-2">Border</h3>
       <div class="col-12 py-3">
-        <div class="caja border d-inline-block"></div>
-        <div class="caja border-top d-inline-block"></div>
-        <div class="caja border-left d-inline-block"></div>
-        <div class="caja border-right d-inline-block"></div>
-        <div class="caja border-bottom d-inline-block"></div>
+        <div class="caja border         d-inline-block  mx-3"></div>
+        <div class="caja border-top     d-inline-block  mx-3"></div>
+        <div class="caja border-end     d-inline-block  mx-3"></div>
+        <div class="caja border-bottom  d-inline-block  mx-3"></div>
+        <div class="caja border-start   d-inline-block  mx-3"></div>
       </div>
       <div class="col-12">
-        <div class="caja border border-0 d-inline-block"></div>
-        <div class="caja border border-top-0 d-inline-block"></div>
-        <div class="caja border border-left-0 d-inline-block"></div>
-        <div class="caja border border-right-0 d-inline-block"></div>
-        <div class="caja border border-bottom-0 d-inline-block"></div>
+        <div class="caja border border-0        d-inline-block  mx-3"></div>
+        <div class="caja border border-top-0    d-inline-block  mx-3"></div>
+        <div class="caja border border-end-0    d-inline-block  mx-3"></div>
+        <div class="caja border border-bottom-0 d-inline-block  mx-3"></div>
+        <div class="caja border border-start-0  d-inline-block  mx-3"></div>
       </div>
     </div>
     <div class="col-12">
-      <div class="caja border border-primary d-inline-block"></div>
-      <div class="caja border border-secondary d-inline-block"></div>
-      <div class="caja border border-success d-inline-block"></div>
-      <div class="caja border border-warning d-inline-block"></div>
-      <div class="caja border border-danger d-inline-block"></div>
-      <div class="caja border border-info d-inline-block"></div>
-      <div class="caja border border-white d-inline-block"></div>
-       <div class="caja border border-light d-inline-block"></div>
-        <div class="caja border bg-white border-dark d-inline-block"></div>
+      <div class="caja border border-primary              d-inline-block mx-3"></div>
+      <div class="caja border border-secondary            d-inline-block mx-3"></div>
+      <div class="caja border border-success              d-inline-block mx-3"></div>
+      <div class="caja border border-warning              d-inline-block mx-3"></div>
+      <div class="caja border border-danger               d-inline-block mx-3"></div>
+      <div class="caja border border-info                 d-inline-block mx-3"></div>
+      <div class="caja border border-white                d-inline-block mx-3"></div>
+      <div class="caja border border-light                d-inline-block mx-3"></div>
+      <div class="caja border bg-secondary border-danger  d-inline-block mx-3"></div>
 
     </div>
+    <h3 class="text-white text-start mt-5 ms-2">Border Rounded</h3>
     <div class="col-12">
-      <div class="caja border border-primary rounded d-inline-block"></div>
-      <div class="caja border border-secondary rounded-top d-inline-block"></div>
-      <div class="caja border border-success rounded-left d-inline-block"></div>
-      <div class="caja border border-warning rounded-right d-inline-block"></div>
-      <div class="caja border border-danger rounded-circle d-inline-block"></div>
-      <div class="caja-rectangular border border-info d-inline-block rounded-pill"></div>
-      <div class="caja border border-white d-inline-block rounded-0"></div>
+      <div class="caja border border-primary rounded                     d-inline-block mx-3"></div>
+      <div class="caja border border-secondary rounded-top               d-inline-block mx-3"></div>
+      <div class="caja border border-success rounded-start               d-inline-block mx-3"></div>
+      <div class="caja border border-warning rounded-end                 d-inline-block mx-3"></div>
+      <div class="caja border border-danger rounded-circle               d-inline-block mx-3"></div>
+      <div class="caja-rectangular border border-info rounded-pill       d-inline-block mx-3"></div>
+      <div class="caja border border-white rounded-0                     d-inline-block mx-3"></div>
 
-      <div class="caja border border-primary rounded d-inline-block rounded-sm"></div>
-      <div class="caja border border-primary rounded d-inline-block rounded-lg"></div>
-       
+      <div class="caja border border-primary rounded rounded-sm          d-inline-block mx-3"></div>
+      <div class="caja border border-primary rounded rounded-lg          d-inline-block mx-3"></div>
 
     </div>
   </div>
+
+
+
+  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="../js/jquery.min.js"></script>
