--- a/Css/Bootstrap/1-Curso Bootstrap/15 - Embed.html
+++ b/Css/Bootstrap/1-Curso Bootstrap/15 - Embed.html
@@ -13,12 +13,10 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-6 offset-sm-2">
+          <div class="embed-responsive embed-responsive-16by9 m-5 ">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8" allowfullscreen></iframe>
           </div>
-
-         
         </div>
       </div>
     </div>
