bootstrap extraccion en carpetas

--- a/Css/Bootstrap/1-Curso Bootstrap/19 - Textos.html
+++ b/Css/Bootstrap/1-Curso Bootstrap/19 - Textos.html
@@ -13,10 +13,13 @@
 
     <title>Textos</title>
   </head>
+
   <body>
+    <style></style>
+
     <div class="container">
       <div class="row">
-        <div class="col-12 bg-secondary p-3 my-1">
+        <div class="col-12 bg-secondary p-3 mt-4 my-1">
           <p class="text-white m-0 text-justify">
             Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
             consectetur adipisicing elit. Tempora praesentium veniam fugiat
@@ -29,7 +32,7 @@
         </div>
 
         <div class="col-12 bg-secondary p-3 my-1">
-          <p class="text-white m-0 text-left">
+          <p class="text-white m-0 text-start">
             Lorem ipsum dolor sit amet.!
           </p>
         </div>
@@ -41,19 +44,23 @@
         </div>
 
         <div class="col-12 bg-secondary p-3 my-1">
-          <p class="text-white m-0 text-right">
+          <p class="text-white m-0 text-end">
             Lorem ipsum dolor sit amet.!
           </p>
         </div>
 
         <div class="col-12 bg-secondary p-3 my-1">
-          <p class="text-white m-0 text-md-right">
+          <p class="text-white m-0 text-md-end">
             Lorem ipsum dolor sit amet.!
           </p>
         </div>
 
-        <div class="bg-primary text-nowrap col-12 my-1">
+        <div class="bg-primary badge text-nowrap col-12 my-1">
           Hola como estás, yo muy bien.
+        </div>
+
+        <div class="badge bg-primary text-wrap m-4" style="width: 6rem">
+          This text should wrap.
         </div>
 
         <div class="col-2 bg-primary text-white my-1 text-truncate">
@@ -67,19 +74,68 @@
         </div>
 
         <div class="col-12">
-          <p class="font-weight-bold">Bold</p>
-          <p class="font-weight-bolder">Bolder</p>
-          <p class="font-weight-light">Light</p>
-          <p class="font-weight-lighter">Lighter</p>
-          <p class="font-italic">Italica</p>
+          <p class="fw-bold">Bold</p>
+          <p class="fw-bolder">Bolder</p>
+          <p class="fw-light">Light</p>
+          <p class="fw-lighter">Lighter</p>
+          <p class="fst-italic">Italica</p>
+          <p class="fst-normal">normal</p>
+
           <br />
-          <a href="" class="text-decoration-none">Enlace</a>
+
+          <p class="lh-1">
+            Some placeholder content to show off the line height utilities.
+            Happy birthday. You could've been the greatest. She ride me
+            like a roller coaster. I messed around and got addicted. You
+            just gotta ignite the light and let it shine! I'm intrigued,
+            for a peek, heard it's fascinating. Catch her if you can. I
+            should've told you what you meant to me 'Cause now I pay the
+            price. Do you ever feel, feel so paper thin.
+          </p>
+          <p class="lh-sm">
+            But you better choose carefully. Yo, shout out to all you kids,
+            buying bottle service, with your rent money. She's sweet as pie
+            but if you break her heart. Just own the night like the 4th of
+            July! In another life I would be your girl. Playing ping pong
+            all night long, everything's all neon and hazy. Shorty so bad,
+            I’m sprung and I don’t care.
+          </p>
+          <p class="lh-base">
+            I can feel a phoenix inside of me. Maybe a reason why all the
+            doors are closed. We go higher and higher. Passport stamps,
+            she's cosmopolitan. Someone said you had your tattoo removed.
+            All my girls vintage Chanel baby. Someone said you had your
+            tattoo removed.
+          </p>
+          <p class="lh-lg">
+            But I will get there. This is real so take a chance and don't
+            ever look back, don't ever look back. You could travel the
+            world but nothing comes close to the golden coast. Of anything
+            and everything. Venice beach and Palm Springs, summertime is
+            everything. Do you ever feel already buried deep six feet
+            under? It's time to bring out the big balloons. So cover your
+            eyes, I have a surprise. So I don't have to say you were the
+            one that got away.
+          </p>
+
+          <p class="text-lowercase">Lowercased text.</p>
+          <p class="text-uppercase">Uppercased text.</p>
+          <p class="text-capitalize">CapiTaliZed text.</p>
+
+          <p class="text-decoration-underline">
+            This text has a line underneath it.
+          </p>
+          <p class="text-decoration-line-through">
+            This text has a line going through it.
+          </p>
+          <a href="#" class="text-decoration-none">Enlace</a>
           <br />
+
           <p>Sin monospace</p>
           <p class="text-monospace">Con Monospace</p>
+
           <br />
         </div>
-        
       </div>
     </div>
 
