--- a/Css/Bootstrap/1-Curso Bootstrap/21 - Segundo Diseño.html
+++ b/Css/Bootstrap/1-Curso Bootstrap/21 - Segundo Diseño.html
@@ -22,14 +22,14 @@
     <nav class="bg-light sticky-top">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-4 text-center p-2">
+          <div class="col-12 col-md-4 text-center p-0">
             <img src="img/logo.png" alt="Logo girl shop">
           </div>
           <div class="col-12 col-md-8 text-end d-none d-md-block">
             <ul class="mb-0">
-              <li class="d-inline-block p-2"><a href="" class="lead list-group-item border-0 bg-light text-secondary" role="button">Inicio</a></li>
-              <li class="d-inline-block p-2"><a href="" class="lead list-group-item border-0 bg-light text-secondary">Tienda</a></li>
-              <li class="d-inline-block p-2"><a href="" class="lead list-group-item border-0 bg-light text-secondary">Rebajas</a></li>
+              <li class="d-inline-block p-2"><a href="" class="lead text-decoration-none text-secondary" role="button">Inicio</a></li>
+              <li class="d-inline-block p-2"><a href="" class="lead text-decoration-none text-secondary">Tienda</a></li>
+              <li class="d-inline-block p-2"><a href="" class="lead text-decoration-none text-secondary">Rebajas</a></li>
             </ul>
           </div>
         </div>
