--- a/Css/Bootstrap/1-Curso Bootstrap/22 - Alerts.html
+++ b/Css/Bootstrap/1-Curso Bootstrap/22 - Alerts.html
@@ -14,6 +14,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
+
+          
           <div class="alert alert-primary mt-2">Alert primary <a href="" class="alert-link">Link</a></div>
           <div class="alert alert-secondary mt-2">Alert secondary</div>
           <div class="alert alert-warning mt-2">Alert-warning</div>
@@ -29,19 +31,23 @@
             Lorem ipsum dolor sit amet.
           </div>
 
-          <h3>Para cerrar alert</h3>
+          <h3>Close alert</h3>
           <div class="alert alert-warning alert-dismissible fade show" role="alert">
             Lorem ipsum dolor sit amet.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+              <!-- <span aria-hidden="true">&times;</span> -->
             </button>
           </div>
+
+          
           <div class="alert alert-success alert-dismissible fade show" role="alert">
             Lorem ipsum dolor sit amet.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
+
+
         </div>
       </div>
     </div>
